--- a/Similarity.ipynb
+++ b/Similarity.ipynb
@@ -390,7 +390,53 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#**Training !**\n",
+    "\n",
+    "train_dataloader = DataLoader(siamese_dataset,\n",
+    "                        shuffle=True,\n",
+    "                        num_workers=2,\n",
+    "                        batch_size=Config.train_batch_size)\n",
+    "\n",
+    "criterion = ContrastiveLoss()\n",
+    "optimizer = optim.Adam(cnn1_model.parameters(),lr = 0.00005 )\n",
+    "\n",
+    "counter = []\n",
+    "loss_history = [] \n",
+    "iteration_number= 0\n",
+    "\n",
+    "#Load the saved model\n",
+    "cnn1_model_name = 'cnn1_model_name1'\n",
+    "cnn1_model = load_models(cnn1_model_name)\n",
+    "loss = 0.0\n",
+    "\n",
+    "for epoch in range(0,Config.train_number_epochs):\n",
+    "    for i, data in enumerate(train_dataloader,0):\n",
+    "        img0, img1 , label = data\n",
+    "        img0, img1 , label = Variable(img0).cuda(), Variable(img1).cuda() , Variable(label).cuda()\n",
+    "        # output1, output2 = cnn2_model(cnn1_model_output1, cnn1_model_output2)\n",
+    "        cnn1_model_output1, cnn1_model_output2 = cnn1_model(img0, img1)\n",
+    "        optimizer.zero_grad()\n",
+    "        loss_contrastive = criterion(cnn1_model_output1,cnn1_model_output2,label)\n",
+    "        loss_contrastive.backward()\n",
+    "        optimizer.step()\n",
+    "        loss += loss_contrastive.item()\n",
+    "        if i %10 == 0 and i > 1:\n",
+    "            iteration_number +=10\n",
+    "            counter.append(iteration_number)\n",
+    "            loss_history.append(loss/10)\n",
+    "            fin = open(\"/content/drive/MyDrive/SavedModel/data2.txt\", \"a\")\n",
+    "            fin.write('\\n'+str(loss/10))\n",
+    "            fin.close()\n",
+    "            loss = 0.0\n",
+    "    print(\"Epoch number {}\\n \\n\".format(epoch))\n",
+    "    \n",
+    "    #save the model every 50 epochs\n",
+    "    if epoch %  2 == 0 and epoch > 0:\n",
+    "      save_models(cnn1_model, 'cnn1_model_name1')\n",
+    "    \n",
+    "show_plot(counter,loss_history)"
+   ]
   },
   {
    "cell_type": "code",
