testing and testing data visulal.

--- a/Similarity.ipynb
+++ b/Similarity.ipynb
@@ -443,21 +443,185 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Testing !\n",
+    "\n",
+    "#Load and Visualization Testing datasets  \n",
+    "\n",
+    "\n",
+    "#Testing and Training folders\n",
+    "testing_folder_dataset = dset.ImageFolder(root=Config.testing_dir) \n",
+    "training_folder_dataset = dset.ImageFolder(root=Config.training_dir)\n",
+    "\n",
+    "#Training and Testing datasets\n",
+    "testing_siamese_dataset = SiameseNetworkDataset(imageFolderDataset=testing_folder_dataset,\n",
+    "                                        transform=transforms.Compose([transforms.Resize((224,224)),\n",
+    "                                                                      transforms.ToTensor()\n",
+    "                                                                      ])\n",
+    "                                       ,should_invert=False)\n",
+    "training_siamese_dataset = SiameseNetworkDataset(imageFolderDataset=training_folder_dataset,\n",
+    "                                        transform=transforms.Compose([transforms.Resize((224,224)),\n",
+    "                                                                      transforms.ToTensor()\n",
+    "                                                                      ])\n",
+    "                                       ,should_invert=False)\n",
+    "\n",
+    "#Training datset visualizations\n",
+    "vis_train_dataloader = DataLoader(training_siamese_dataset,\n",
+    "                        shuffle=False,\n",
+    "                        num_workers=8,\n",
+    "                        batch_size=12)\n",
+    "dataiter = iter(vis_train_dataloader)\n",
+    "x01,x1,a= next(dataiter)\n",
+    "concatenated = torch.cat((x01,x1),0)\n",
+    "imshow(torchvision.utils.make_grid(concatenated))\n",
+    "print(a)\n",
+    "\n",
+    "#Testing datset visualizations \n",
+    "vis_test_dataloader = DataLoader(testing_siamese_dataset,\n",
+    "                        shuffle=False,\n",
+    "                        num_workers=8,\n",
+    "                        batch_size=12)\n",
+    "dataiter = iter(vis_test_dataloader)\n",
+    "\n",
+    "x01,x1,a= next(dataiter)\n",
+    "concatenated = torch.cat((x01,x1),0)\n",
+    "imshow(torchvision.utils.make_grid(concatenated))\n",
+    "print(a,\"\\n\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Testing with training data \n",
+    "\n",
+    "#Load the saved model for testing\n",
+    "cnn1_model_name = 'cnn1_model_name1'\n",
+    "cnn1_model = load_models(cnn1_model_name)\n",
+    "\n",
+    "cnn1_model\n",
+    "\n",
+    "#test with training data\n",
+    "train_dataloader = DataLoader(training_siamese_dataset,num_workers=2,batch_size=1,shuffle=False)\n",
+    "dataiter = iter(train_dataloader)\n",
+    "\n",
+    "#Threshold for the euclidain distance is 0.75\n",
+    "threshold_dis = [8]\n",
+    "correct_match_prediction_label = 0\n",
+    "correct_count = 0\n",
+    "total_count = 1440 #examples for testing from trainset\n",
+    "# for thre in threshold_dis:\n",
+    "thre = 8\n",
+    "for i in range(total_count):\n",
+    "    x0,x1,actual_label = next(dataiter) #img0&img1\n",
+    "    output1,output2 = cnn1_model(Variable(x0).cuda(),Variable(x1).cuda())\n",
+    "    euclidean_distance =F.pairwise_distance(output1, output2)\n",
+    "    # print(\"Dis: \",euclidean_distance, \"\\n\")\n",
+    "    if euclidean_distance <= thre:\n",
+    "      if actual_label == correct_match_prediction_label:\n",
+    "        correct_count += 1\n",
+    "accuracy = (correct_count / total_count) * 100\n",
+    "print(r\"Training Accuracy : {}, with threshold : {}\".format(accuracy, thre))\n",
+    "# print(r\"Avarage distance : {}, with threshold : {}\".format(total_distance, threshold_dis))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Demonestration with test data\n",
+    "\n",
+    "\n",
+    "# from numpy.random import randint\n",
+    "from torchvision import datasets, transforms\n",
+    "import os\n",
+    "# from pathlib import Path\n",
+    "# from os import path\n",
+    "# from torchvision.utils import save_image\n",
+    "# # import torch\n",
+    "# # import torchvision\n",
+    "transform2 = transforms.Compose([transforms.ToTensor(),transforms.Resize((224,224))])\n",
+    "# import shutil, sys \n",
+    "# import torch\n",
+    "\n",
+    "# import matplotlib as plt\n",
+    "# import matplotlib.pylab as plt\n",
+    "# import numpy as np\n",
+    "# import torchvision.utils as vutils\n",
+    "\n",
+    "\n",
+    "\n",
+    "# !unzip /content/drive/MyDrive/FinalDataSet/bedilu.zip /content/drive/MyDrive/FinalDataSet/\n",
+    "\n",
+    "\n",
+    "# parent = '/content/drive/MyDrive/FinalDataSet/AllDatasets/Testing'\n",
+    "anchor_dir = '/content/drive/MyDrive/FinalDataSet/sketch'\n",
+    "comp_dir = '/content/drive/MyDrive/FinalDataSet/photo/'\n",
+    "\n",
+    "dataset1 = datasets.ImageFolder(anchor_dir, transform=transform2) #sketch\n",
+    "anchor = torch.utils.data.DataLoader(dataset1, batch_size=1,shuffle=True)\n",
+    "\n",
+    "dataset2 = datasets.ImageFolder(comp_dir, transform=transform2) #photo\n",
+    "comparing = torch.utils.data.DataLoader(dataset2, batch_size=1,shuffle=True)\n",
+    "\n",
+    "# dataset = datasets.ImageFolder(anchor_dir, transform=transform2)\n",
+    "# anchor = torch.utils.data.DataLoader(dataset, batch_size=1,shuffle=True)\n",
+    "# # length = len(os.listdir(comp_dir))\n",
+    "# #we can change comparing batch size to increase the compared images for each sketch\n",
+    "# dataset2 = datasets.ImageFolder(comp_dir, transform=transform2)\n",
+    "# comparing = torch.utils.data.DataLoader(dataset2, batch_size=10,shuffle=True)\n",
+    "# for i in range(total_count):\n",
+    "#       x0 ,x1,actual_label = next(dataiter) #img0&img1\n",
+    "#       output1,output2 = cnn1_model(Variable(x0).cuda(),Variable(x1).cuda())\n",
+    "#       euclidean_distance =F.pairwise_distance(output1, output2)\n",
+    "#       if euclidean_distance <= thre:\n",
+    "#         if actual_label == correct_match_prediction_label:\n",
+    "#           correct_count += 1\n",
+    "#   accuracy = (correct_count / total_count) * 100\n",
+    "#   print(r\"Testing Accuracy : {}, with threshold : {}\".format(accuracy, thre))\n",
+    "\n",
+    "\n",
+    "# threshold_dis = [9]\n",
+    "correct_match_prediction_label = 0\n",
+    "total_count = 20 #examples for testing from trainset\n",
+    "thre = 1.2\n",
+    "\n",
+    "\n",
+    "\n",
+    "correct_count = 0\n",
+    "anch,label1 = next(iter(anchor))\n",
+    "euclidean_distance = []\n",
+    "concatenated = []\n",
+    "# here we can implement for loop to get another shuffled comaring images\n",
+    "for item in range(total_count):\n",
+    "    comp,label2 = next(iter(comparing))\n",
+    "    concatenated.append(torch.cat((anch,comp),0))\n",
+    "    output1, output2 = cnn1_model(Variable(anch).cuda(),Variable(comp).cuda())\n",
+    "    #here we can find each image in the testing dataloader, to compare with the anchor\n",
+    "    # euclidean_distance = F.pairwise_distance(output1, output2)\n",
+    "    euclidean_distance.append(F.pairwise_distance(output1, output2).item())\n",
+    "\n",
+    "    if euclidean_distance[item] <= thre:\n",
+    "      if label1 == label2:\n",
+    "        correct_count += 1\n",
+    "    else:\n",
+    "      if label1 != label2:\n",
+    "        correct_count+= 1\n",
+    "        # print(correct_count)\n",
+    "    # print(label1,label2,euclidean_distance)\n",
+    "    imshow(torchvision.utils.make_grid(concatenated[item]),'Dissimilarity: {:.2f}'.format(euclidean_distance[item]))\n",
+    "\n",
+    "accuracy = (correct_count/total_count)*100\n",
+    "# print(r\"Testing Accuracy : {}, with threshold : {}, correct count{}\".format(accuracy, thre, correct_count))\n",
+    "euclidean_distance_series = pd.Series(euclidean_distance)\n",
+    "small_dis_index = euclidean_distance_series.argmin()\n",
+    "print(\"The most matching images are :\\n\")\n",
+    "imshow(torchvision.utils.make_grid(concatenated[small_dis_index]),'Dissimilarity: {:.2f}'.format(euclidean_distance[small_dis_index]))"
+   ]
   },
   {
    "cell_type": "code",
